[package]
name = "jasp"
version = "0.1.0"
authors = ["Joni Katajamäki <joni.katajamaki@wunderdog.fi>"]
edition = "2018"
license = "BSD-2-Clause"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.51"
pest = "2.1.3"
pest_consume = "1.1.0"
pest_derive = "2.1.0"
wasm-bindgen = "0.2.74"
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.3.0"

[build]
target = "wasm32-unknown-unknown"

[profile.release]
lto = true
opt-level = 's'
